аннотации для конструкторов для dto переделал тесты для бота под клиент добавил wiremock тесты для новый способов обращения к api github